Adding some new Utils

--- a/react/pages/index.html
+++ b/react/pages/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="utf-8">
     <title>React app fill by yourself</title>
+    <link rel="stylesheet" type="text/css" href="css/utils-css/standart-css.css">
+    <link rel="stylesheet" type="text/css" href="css/utils-css/templates.css">
+    <link rel="stylesheet" type="text/css" href="css/utils-css/single-elements-utils.css">
+    <link rel="stylesheet" type="text/css" href="css/utils-css/container-util.css">
 </head>
 <body>
     <div id="root"></div>
